Fix msgBox  overflow bug on input; fix send on enter key issue.

--- a/teach-me-ui/src/styles/_ChatBox.scss
+++ b/teach-me-ui/src/styles/_ChatBox.scss
@@ -47,10 +47,6 @@ $chat-text-color: #333;
     background-color: $theme-secondary-v4;
   }
 
-  span {
-    margin-bottom: -0.25rem;
-  }
-
   &.hide {
     transform: rotateY(180deg) scale(0);
     visibility: hidden;
@@ -275,8 +271,8 @@ $msg-radius: 0.6rem;
   .chat-timestamp {
     padding: 0;
     padding: {
-      right: 0.45rem;
-      bottom: 0.15rem;
+      right: 0.35rem;
+      bottom: 0.1rem;
       left: 0.45rem;
     }
   }
